# proxygen

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
app/api/v2/: api.py
app/api/v2/endpoints/: profiles.py
app/core/: config.py
app/repos/: config_repo.py  profile_repo.py
app/schemas/: clash_config.py
app/services/: clash_config_service.py  profile_service.py
data/rules/: controller.yaml  dns.yaml  proxy-groups.yaml  rules.yaml  tun.yaml
data/rules/lists/: Apple.list  China.list  ChinaDomain.list  Global.list  LocalAreaNetwork.list  Netflix.list  OneDrive.list  ProxyGFWlist.list  SCT.list  SCTGATE.list  ZJU.list  ais.list  pays.list  scholar.list
